<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:background="@drawable/background_lightning_bolt">

    <Button
        android:id="@+id/back_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sen_bold"
        android:padding="5dp"
        android:text="@string/maybe_later"
        android:textColor="#FAFAFA"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        grid:ignore="SmallSp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sen_bold"
        android:padding="5dp"
        android:text="@string/sure"
        android:textColor="#FAFAFA"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toRightOf="@+id/back_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="361dp"
        android:layout_height="52dp"
        android:fontFamily="@font/sen_bold"
        android:text="@string/end_screen_text"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/summary_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <ImageView
        android:id="@+id/summary_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/text_card"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/random_text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/game_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:letterSpacing="-0.1"
        android:lineSpacingMultiplier="0.75"
        android:text="@string/game_prompt"
        android:textColor="@color/black"
        android:textSize="65sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_card" />


</androidx.constraintlayout.widget.ConstraintLayout>