<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:background="@drawable/background_lightning_bolt">

    <Button
        android:id="@+id/back_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sen_bold"
        android:padding="5dp"
        android:text="@string/back"
        android:textColor="#FAFAFA"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sen_bold"
        android:padding="5dp"
        android:text="@string/next"
        android:textColor="#FAFAFA"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toRightOf="@+id/back_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen_bold"
        android:text="@string/part_one_text"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/grid_image_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/tap_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sen_bold"
        android:text="@string/tap_prompt_text"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <GridLayout
        android:id="@+id/grid_image_card"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#65FF3B"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cover1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game" />

        <ImageView
            android:id="@+id/cover2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game" />

        <ImageView
            android:id="@+id/cover3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

        <ImageView
            android:id="@+id/cover16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_game"
            grid:layout_gravity="center" />

    </GridLayout>

    <TextView
        android:id="@+id/text_card"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_row="0"
        android:layout_column="2"
        android:background="#FFEB3B"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/random_text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>